--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -1,6 +1,8 @@
 .table {
   position: relative;
+
   min-width: 800px;
+  margin-right: 45px;
 
   border-collapse: collapse;
   text-align: right;
